crates/core/tests/rust/snapshots/integration_tests__rust__basic_ir.snap
---
source: crates/core/tests/rust/mod.rs
expression: ir_snapshot_content
---
Source Code:
let a = 1;
let b = a + 1;

AST:
(source_file
  (let_declaration
    pattern: (identifier "a")
    value: (integer_literal "1")
  )
  (let_declaration
    pattern: (identifier "b")
    value: (binary_expression
      left: (identifier "a")
      right: (integer_literal "1")
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "tests/rust/fixtures/basic_rust_code.rs",
    definitions: [
        Definition {
            name: "a",
            position: Position {
                start_line: 1,
                start_column: 5,
                end_line: 1,
                end_column: 6,
            },
            definition_type: VariableDefinition,
        },
        Definition {
            name: "b",
            position: Position {
                start_line: 2,
                start_column: 5,
                end_line: 2,
                end_column: 6,
            },
            definition_type: VariableDefinition,
        },
    ],
    dependencies: [
        Dependency {
            source_line: 2,
            target_line: 1,
            symbol: "a",
            dependency_type: VariableUse,
            context: Some(
                "Identifier:2:9",
            ),
        },
    ],
    usage: [
        Usage {
            name: "a",
            kind: Identifier,
            position: Position {
                start_line: 2,
                start_column: 9,
                end_line: 2,
                end_column: 10,
            },
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 2,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
