crates/core/tests/rust/snapshots/integration_tests__rust__basic_metrics.snap
---
source: core/tests/rust/mod.rs
assertion_line: 13
expression: "serde_json::to_string_pretty(&result).unwrap()"
---
{
  "file_path": "tests/rust/fixtures/basic_rust_code.rs",
  "line_metrics": [
    {
      "line_number": 2,
      "total_dependencies": 1,
      "dependency_distance_cost": 0.5,
      "depth": 1,
      "transitive_dependencies": 1,
      "dependent_lines": [
        1
      ]
    }
  ],
  "overall_complexity_score": 2.25
}
