crates/core/tests/rust/snapshots/integration_tests__rust__forward_reference_scope_ir.snap
---
source: crates/core/tests/rust/mod.rs
expression: ir_snapshot_content
---
Source Code:
fn main() {
    let y = x + 1;  // x not yet defined - should not create dependency
    let x = 42;
}

fn proper_order() {
    let x = 42;
    let y = x + 1;  // x already defined - should create dependency
}

fn block_scoping() {
    let outer = 10;
    {
        let inner = outer + 5;  // outer is accessible
    }
    // inner is not accessible here (but we don't test this case in dependency resolution)
}

fn helper() -> i32 {
    42
}

fn function_scoping() {
    let result = helper();  // helper defined before main
}

fn func_a() {
    let local_var = 10;
}

fn func_b() {
    // local_var not accessible from here, but since it's not used, no dependency should be created
    let x = 5;
}

AST:
(source_file
  (function_item
    name: (identifier "main")
    parameters: (parameters)
    body: (block
      (let_declaration
        pattern: (identifier "y")
        value: (binary_expression
          left: (identifier "x")
          right: (integer_literal "1")
        )
      )
      (line_comment)
      (let_declaration
        pattern: (identifier "x")
        value: (integer_literal "42")
      )
    )
  )
  (function_item
    name: (identifier "proper_order")
    parameters: (parameters)
    body: (block
      (let_declaration
        pattern: (identifier "x")
        value: (integer_literal "42")
      )
      (let_declaration
        pattern: (identifier "y")
        value: (binary_expression
          left: (identifier "x")
          right: (integer_literal "1")
        )
      )
      (line_comment)
    )
  )
  (function_item
    name: (identifier "block_scoping")
    parameters: (parameters)
    body: (block
      (let_declaration
        pattern: (identifier "outer")
        value: (integer_literal "10")
      )
      (expression_statement
        (block
          (let_declaration
            pattern: (identifier "inner")
            value: (binary_expression
              left: (identifier "outer")
              right: (integer_literal "5")
            )
          )
          (line_comment)
        )
      )
      (line_comment)
    )
  )
  (function_item
    name: (identifier "helper")
    parameters: (parameters)
    return_type: (primitive_type "i32")
    body: (block
      (integer_literal "42")
    )
  )
  (function_item
    name: (identifier "function_scoping")
    parameters: (parameters)
    body: (block
      (let_declaration
        pattern: (identifier "result")
        value: (call_expression
          function: (identifier "helper")
          arguments: (arguments)
        )
      )
      (line_comment)
    )
  )
  (function_item
    name: (identifier "func_a")
    parameters: (parameters)
    body: (block
      (let_declaration
        pattern: (identifier "local_var")
        value: (integer_literal "10")
      )
    )
  )
  (function_item
    name: (identifier "func_b")
    parameters: (parameters)
    body: (block
      (line_comment)
      (let_declaration
        pattern: (identifier "x")
        value: (integer_literal "5")
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "tests/rust/fixtures/forward_reference_scope.rs",
    definitions: [
        Definition {
            name: "main",
            position: Position {
                start_line: 1,
                start_column: 4,
                end_line: 1,
                end_column: 8,
            },
            definition_type: FunctionDefinition,
        },
        Definition {
            name: "y",
            position: Position {
                start_line: 2,
                start_column: 9,
                end_line: 2,
                end_column: 10,
            },
            definition_type: VariableDefinition,
        },
        Definition {
            name: "x",
            position: Position {
                start_line: 3,
                start_column: 9,
                end_line: 3,
                end_column: 10,
            },
            definition_type: VariableDefinition,
        },
        Definition {
            name: "proper_order",
            position: Position {
                start_line: 6,
                start_column: 4,
                end_line: 6,
                end_column: 16,
            },
            definition_type: FunctionDefinition,
        },
        Definition {
            name: "x",
            position: Position {
                start_line: 7,
                start_column: 9,
                end_line: 7,
                end_column: 10,
            },
            definition_type: VariableDefinition,
        },
        Definition {
            name: "y",
            position: Position {
                start_line: 8,
                start_column: 9,
                end_line: 8,
                end_column: 10,
            },
            definition_type: VariableDefinition,
        },
        Definition {
            name: "block_scoping",
            position: Position {
                start_line: 11,
                start_column: 4,
                end_line: 11,
                end_column: 17,
            },
            definition_type: FunctionDefinition,
        },
        Definition {
            name: "outer",
            position: Position {
                start_line: 12,
                start_column: 9,
                end_line: 12,
                end_column: 14,
            },
            definition_type: VariableDefinition,
        },
        Definition {
            name: "inner",
            position: Position {
                start_line: 14,
                start_column: 13,
                end_line: 14,
                end_column: 18,
            },
            definition_type: VariableDefinition,
        },
        Definition {
            name: "helper",
            position: Position {
                start_line: 19,
                start_column: 4,
                end_line: 19,
                end_column: 10,
            },
            definition_type: FunctionDefinition,
        },
        Definition {
            name: "function_scoping",
            position: Position {
                start_line: 23,
                start_column: 4,
                end_line: 23,
                end_column: 20,
            },
            definition_type: FunctionDefinition,
        },
        Definition {
            name: "result",
            position: Position {
                start_line: 24,
                start_column: 9,
                end_line: 24,
                end_column: 15,
            },
            definition_type: VariableDefinition,
        },
        Definition {
            name: "func_a",
            position: Position {
                start_line: 27,
                start_column: 4,
                end_line: 27,
                end_column: 10,
            },
            definition_type: FunctionDefinition,
        },
        Definition {
            name: "local_var",
            position: Position {
                start_line: 28,
                start_column: 9,
                end_line: 28,
                end_column: 18,
            },
            definition_type: VariableDefinition,
        },
        Definition {
            name: "func_b",
            position: Position {
                start_line: 31,
                start_column: 4,
                end_line: 31,
                end_column: 10,
            },
            definition_type: FunctionDefinition,
        },
        Definition {
            name: "x",
            position: Position {
                start_line: 33,
                start_column: 9,
                end_line: 33,
                end_column: 10,
            },
            definition_type: VariableDefinition,
        },
    ],
    dependencies: [
        Dependency {
            source_line: 2,
            target_line: 3,
            symbol: "x",
            dependency_type: VariableUse,
            context: Some(
                "Identifier:2:13",
            ),
        },
        Dependency {
            source_line: 8,
            target_line: 7,
            symbol: "x",
            dependency_type: VariableUse,
            context: Some(
                "Identifier:8:13",
            ),
        },
        Dependency {
            source_line: 14,
            target_line: 12,
            symbol: "outer",
            dependency_type: VariableUse,
            context: Some(
                "Identifier:14:21",
            ),
        },
        Dependency {
            source_line: 24,
            target_line: 19,
            symbol: "helper",
            dependency_type: FunctionCall,
            context: Some(
                "CallExpression:24:18",
            ),
        },
    ],
    usage: [
        Usage {
            name: "x",
            kind: Identifier,
            position: Position {
                start_line: 2,
                start_column: 13,
                end_line: 2,
                end_column: 14,
            },
        },
        Usage {
            name: "x",
            kind: Identifier,
            position: Position {
                start_line: 8,
                start_column: 13,
                end_line: 8,
                end_column: 14,
            },
        },
        Usage {
            name: "outer",
            kind: Identifier,
            position: Position {
                start_line: 14,
                start_column: 21,
                end_line: 14,
                end_column: 26,
            },
        },
        Usage {
            name: "helper",
            kind: CallExpression,
            position: Position {
                start_line: 24,
                start_column: 18,
                end_line: 24,
                end_column: 26,
            },
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 34,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
