crates/core/tests/rust/snapshots/integration_tests__rust__macro_invocation_dependency_metrics.snap
---
source: crates/core/tests/rust/mod.rs
expression: "serde_json :: to_string_pretty(& result).unwrap()"
---
{
  "file_path": "tests/rust/fixtures/macro_invocation_dependency.rs",
  "line_metrics": [
    {
      "line_number": 3,
      "total_dependencies": 1,
      "dependency_distance_cost": 0.1111111111111111,
      "depth": 1,
      "transitive_dependencies": 1,
      "dependent_lines": [
        2
      ]
    },
    {
      "line_number": 8,
      "total_dependencies": 1,
      "dependency_distance_cost": 0.7777777777777778,
      "depth": 1,
      "transitive_dependencies": 1,
      "dependent_lines": [
        1
      ]
    }
  ],
  "overall_complexity_score": 4.488888888888889
}
